testsuite/tests/grammar/invalid_lexers/case_4.lkt
import common

lexer foo_example {
    Foo
    match p"foo" {
        if previous_token is Foo then send(Foo, 3)
    }
}
